--- a/jiant_configs/competencewiki103baseline.conf
+++ b/jiant_configs/competencewiki103baseline.conf
@@ -5,12 +5,12 @@ exp_dir = elmocompetencewiki103baseline
 run_dir = elmocompetencewiki103baseline
 project_dir = elmocompetencewiki103baseline
 local_log_path = elmocompetencewiki103baseline.log
-batch_size = 4
-cuda = 1
+batch_size = 8
+cuda = auto
 random_seed = 42
 
 input_module = elmo
-elmo_weight_file_path = /home/lm/hdf5files/curriculumbaseline103.hdf5
+elmo_weight_file_path = /home/spacemanidol/hdf5files/curriculumbaseline103.hdf5
 
 pretrain_tasks = glue
 target_tasks = glue
