--- a/jiant_configs/competencewiki103dep.conf
+++ b/jiant_configs/competencewiki103dep.conf
@@ -5,12 +5,12 @@ exp_dir = elmocompetencewiki103dep
 run_dir = elmocompetencewiki103dep
 project_dir = elmocompetencewiki103dep
 local_log_path = elmocompetencewiki103dep.log
-batch_size = 4
-cuda = 1
+batch_size = 8
+cuda = auto
 random_seed = 42
 
 input_module = elmo
-elmo_weight_file_path = /home/lm/hdf5files/curriculumdep103.hdf5
+elmo_weight_file_path = /home/spacemanidol/hdf5files/curriculumdep103.hdf5
 
 pretrain_tasks = glue
 target_tasks = glue
