cleaning everything up and adding first set of GLUE results

--- a/jiant_configs/competencewiki103baseline.conf
+++ b/jiant_configs/competencewiki103baseline.conf
@@ -6,7 +6,7 @@ run_dir = elmocompetencewiki103baseline
 project_dir = elmocompetencewiki103baseline
 local_log_path = elmocompetencewiki103baseline.log
 batch_size = 8
-cuda = auto
+cuda = 1
 random_seed = 42
 
 input_module = elmo
