--- a/jiant_configs/competencewiki103dep.conf
+++ b/jiant_configs/competencewiki103dep.conf
@@ -5,8 +5,8 @@ exp_dir = elmocompetencewiki103dep
 run_dir = elmocompetencewiki103dep
 project_dir = elmocompetencewiki103dep
 local_log_path = elmocompetencewiki103dep.log
-batch_size = 8
-cuda = auto
+batch_size = 4
+cuda = 1
 random_seed = 42
 
 input_module = elmo
